# smartbay-dover-vqa

./: Dockerfile  JenkinsConstants.groovy  LICENSE  README.md  ai4-metadata.yml  metadata.json  pyproject.toml  requirements.txt  tox.ini
.sqa/: config.yml
smartbay_dover_vqa/: api.py  config.py
tests/: test_api.py
